# terraform_practice-ing

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  makefile  pyproject.toml  requirements.txt  run.py
deployment/.github/workflows/: ci-cd.yml
deployment/docker/: Dockerfile-backend  Dockerfile-frontend  Dockerfile-frontend-dev  docker-compose-dev.yml  docker-compose-prod.yml
deployment/terraform/: .terraform.tfstate.lock.info  main.tf  outputs.tf  startup.sh.tmpl  terraform.tfvars.example  variables.tf
service/backend/: pyproject.toml  run.py
service/frontend/: README.md  nginx.conf  package-lock.json  vite.config.js
service/frontend/src/: App.vue
